--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html lang="en" dir="ltr">
 
   <head
-  <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all"
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
+  <link rel="stylesheet" href="css/styles.css">
   <meta charset="utf-8">
     <title>Portfolio</title>
 
   </head>
   <body>
+    <div class="container">
     <h1>Maria Lagunero</h1>
-    <img src="img/girlpic.jpeg">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
+      <img src="img/girlpic.jpeg">
+      <p>My name is Maria. I am originally from Hawaii. I am now in Portland, Oregon. I have been here for over three years. I love to travel, both domestically and internationally. I have seen all of the island in my state as well as visiting all 50 states in the United States. As of this moment I have been to 52 countries around the world. I have lived in 2 other countries beside my own. I had been working as an RBT (registered behavior technician) for 12 years before leaving to go to coding school</p>
+    </div>
   </body>
 </html>
