--- a/index.html
+++ b/index.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-  <head
-  <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
-  <link rel="stylesheet" href="css/styles.css">
-  <meta charset="utf-8">
-    <title>Portfolio</title>
+  <head>
+    <link href="css/bootstrap.css" >
+    <link rel="stylesheet" href="css/styles.css">
+    <meta charset="utf-8">
+      <title>Portfolio</title>
 
   </head>
   <body>
+    <h1><em>Maria Lagunero</em></h1>
     <div class="container">
-    <h1>Maria Lagunero</h1>
       <img src="img/girlpic.jpeg">
-      <p>My name is Maria. I am originally from Hawaii. I am now in Portland, Oregon. I have been here for over three years. I love to travel, both domestically and internationally. I have seen all of the island in my state as well as visiting all 50 states in the United States. As of this moment I have been to 52 countries around the world. I have lived in 2 other countries beside my own. I had been working as an RBT (registered behavior technician) for 12 years before leaving to go to coding school</p>
+      <p>Hello! My name is Maria. I am originally from Hawaii. I am now in Portland, Oregon. I have been here for over three years. I love to travel, both domestically and internationally. I have seen all of the islands in my state as well as visiting all 50 states in the United States. As of this moment I have been to 52 countries around the world. I have lived in 2 other countries besides my own. I had been working as an RBT (registered behavior technician) working for special needs kids for 12 years before leaving to go to coding school.</p>
+    <ul>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+    <ol>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ol>
     </div>
   </body>
 </html>
