--- a/index.html
+++ b/index.html
@@ -5,26 +5,30 @@
     <link href="css/bootstrap.css" >
     <link rel="stylesheet" href="css/styles.css">
     <meta charset="utf-8">
-      <title>Portfolio</title>
-
+      <title>Portfolio:Maria Lagunero</title>
   </head>
   <body>
-    <h1><em>Maria Lagunero</em></h1>
-    <div class="container">
-      <img src="img/girlpic.jpeg">
+    <h1>Maria Lagunero</h1>
+    <img class="main"src="img/girlpic.jpeg" alt="girlwithemptyspeechballoon.">
+
       <p>Hello! My name is Maria. I am originally from Hawaii. I am now in Portland, Oregon. I have been here for over three years. I love to travel, both domestically and internationally. I have seen all of the islands in my state as well as visiting all 50 states in the United States. As of this moment I have been to 52 countries around the world. I have lived in 2 other countries besides my own. I had been working as an RBT (registered behavior technician) working for special needs kids for 12 years before leaving to go to coding school.</p>
-    <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+
+
+    <h2 class="class1">Places I've lived </h2>
+
+
+    <ul class="class1">
+      <li>hawaii</li>
+      <li>sf</li>
+      <li>dc</li>
+      <li>portland</li>
     </ul>
     <ol>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>server</li>
+      <li>sales</li>
+      <li>office manager</li>
+      <li>rbt/teacher</li>
     </ol>
-    </div>
+
   </body>
 </html>
