--- a/index.html
+++ b/index.html
@@ -8,32 +8,33 @@
     <title>Portfolio:Maria Lagunero</title>
   </head>
   <body>
+
     <h1>Maria Lagunero</h1>
+
     <img class="main"src="img/girlpic.jpeg" alt="girlwithemptyspeechballoon.">
 
     <p>Hello! My name is Maria. I am originally from Hawaii. I am now in Portland, Oregon. I have been here for over three years. I love to travel, both domestically and internationally. I have seen all of the islands in my state as well as visiting all 50 states in the United States. As of this moment I have been to 52 countries around the world. I have lived in 2 other countries besides my own. I had been working as an RBT (registered behavior technician) working for special needs kids for 12 years before leaving to go to coding school.</p>
 
 
-    <h2 class="class1">Places I've lived </h2>
+    <h2 class="class1">List of Projects </h2>
 
 
-      <ul class="class2">
+      <ol>
+        <li><a href="https://github.com/marialagunero/vacation/blob/master/index.html">Vacation:Uses boostrap and css styles</li>
+          <li><a href="https://github.com/marialagunero/Cupcakes/blob/master/index.html">Cupcake:Uses flexbox and css styles</li>
+          <li><a href="https://github.com/marialagunero/foodforthought/blob/master/index.html">Food For Thought: Uses HTML, and flexbox</li>
+        </ol>
 
-        <li>hawaii</li>
-        <li>sf</li>
-        <li>dc</li>
-        <li>portland</li>
+
+    <h3 class="class1">About Me </h3>
+
+      <ul>
+        <li>Background</li>
+        <li>Education</li>
+        <li>Present:Coding Student</li>
+        <li>rbt/teacher</li>
       </ul>
 
-    <h3 class="class1">Job Experience</h3>
-
-      <ol class="class2">
-
-        <li>server</li>
-        <li>sales</li>
-        <li>office manager</li>
-        <li>rbt/teacher</li>
-      </ol>
 
   </body>
 </html>
