add new pictures and delete old pictures, add container

--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@
   <body>
 
     <h1>Maria Lagunero</h1>
+    <div class="container">
 
-    <img class="main"src="img/girlpic.jpeg" alt="girlwithemptyspeechballoon.">
+    <div class="class1">
+
+    </div>
+
+    </div>
+
+
 
     <p>Hello! My name is Maria. I am originally from Hawaii. I am now in Portland, Oregon. I have been here for over three years. I love to travel, both domestically and internationally. I have seen all of the islands in my state as well as visiting all 50 states in the United States. As of this moment I have been to 52 countries around the world. I have lived in 2 other countries besides my own. I had been working as an RBT (registered behavior technician) working for special needs kids for 12 years before leaving to go to coding school.</p>
 
 
-    <h2 class="class1">List of Projects </h2>
+    <h2 class="class2">List of Projects </h2>
 
 
       <ol>
@@ -26,7 +33,7 @@
         </ol>
 
 
-    <h3 class="class1">About Me </h3>
+    <h3 class="class2">About Me </h3>
 
       <ul>
         <li>Background</li>
