--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
   <head>
-    <link href="css/bootstrap.css" >
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
     <meta charset="utf-8">
     <title>Portfolio:Maria Lagunero</title>
@@ -12,11 +12,14 @@
     <h1>Maria Lagunero</h1>
     <div class="container">
 
-    <div class="class1">
-
+     <div class="class1">
+      <img src="img/img1.jpg" alt="maria1">
+      <img src="img/img2.jpg" alt="maria2">
+     </div>
     </div>
 
-    </div>
+
+
 
 
 
@@ -34,7 +37,7 @@
 
 
     <h3 class="class2">About Me </h3>
-
+     <img src="img/img5.jpg" alt="maria5">
       <ul>
         <li>Background</li>
         <li>Education</li>
