--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
   </head>
   <body>
 
-    <h1>Maria Lagunero</h1>
-    <div class="container">
+    <div class="container-fluid">
+      <div class="jumbotron">
+        <div class="panel panel-info">
+          <div class="panel-heading">
+            <h1 class="panel-title">Maria Lagunero</h1>
 
-     <div class="class1">
-      <img src="img/img1.jpg" alt="maria1">
-      <img src="img/img2.jpg" alt="maria2">
-     </div>
+             <div class="class1">
+               <img src="img/img1.jpg" alt="maria1">
+               <img src="img/img2.jpg" alt="maria2">
+             </div>
+
+          </div>
+        </div>
+        </div>
+      </div>
     </div>
-
-
-
-
-
-
-    <p>Hello! My name is Maria. I am originally from Hawaii. I am now in Portland, Oregon. I have been here for over three years. I love to travel, both domestically and internationally. I have seen all of the islands in my state as well as visiting all 50 states in the United States. As of this moment I have been to 52 countries around the world. I have lived in 2 other countries besides my own. I had been working as an RBT (registered behavior technician) working for special needs kids for 12 years before leaving to go to coding school.</p>
-
 
     <h2 class="class2">List of Projects </h2>
 
@@ -44,6 +44,7 @@
         <li>Present:Coding Student</li>
         <li>rbt/teacher</li>
       </ul>
+
 
 
   </body>
