add classes with columns and changed layout of html

--- a/index.html
+++ b/index.html
@@ -9,41 +9,55 @@
   </head>
   <body>
 
-    <div class="container-fluid">
-      <div class="jumbotron">
-        <div class="panel panel-info">
-          <div class="panel-heading">
-            <h1 class="panel-title">Maria Lagunero</h1>
 
-             <div class="class1">
-               <img src="img/img1.jpg" alt="maria1">
-               <img src="img/img2.jpg" alt="maria2">
-             </div>
+    <h1>Maria Lagunero</h1>
 
-          </div>
-        </div>
-        </div>
+      <div class="class1">
+        <img src="img/img1.jpg" alt="maria1">
+        <img src="img/img2.jpg" alt="maria2">
       </div>
-    </div>
+
+
 
     <h2 class="class2">List of Projects </h2>
 
 
       <ol>
-        <li><a href="https://github.com/marialagunero/vacation/blob/master/index.html">Vacation:Uses boostrap and css styles</li>
-          <li><a href="https://github.com/marialagunero/Cupcakes/blob/master/index.html">Cupcake:Uses flexbox and css styles</li>
-          <li><a href="https://github.com/marialagunero/foodforthought/blob/master/index.html">Food For Thought: Uses HTML, and flexbox</li>
+        <li><a href="https://github.com/marialagunero/vacation/blob/master/index.html">Vacation:Uses bootstrap and css styles</a></li>
+          <li><a href="https://github.com/marialagunero/Cupcakes/blob/master/index.html">Cupcake:Uses flexbox and css styles</a></li>
+          <li><a href="https://github.com/marialagunero/foodforthought/blob/master/index.html">Food For Thought: Uses HTML, and flexbox</a></li>
         </ol>
 
 
-    <h3 class="class2">About Me </h3>
+    <h3 class="class2">Hobbies</h3>
      <img src="img/img5.jpg" alt="maria5">
       <ul>
-        <li>Background</li>
-        <li>Education</li>
-        <li>Present:Coding Student</li>
-        <li>rbt/teacher</li>
+        <li>Reading</li>
+        <li>Hiking</li>
+        <li>Cooking</li>
+        <li>Traveling</li>
       </ul>
+
+      <div class="container-fluid">
+        <div class="jumbotron">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <h1 class="panel-title">About Me</h1>
+
+              <div class="col-md-3">Background</div>
+              <div class="col-md-3">Education</div>
+              <div class="col-md-3">Job</div>
+              <div class="col-md-3">Present:Coding Student</div>
+            </div>
+
+
+
+            </div>
+          </div>
+          </div>
+        </div>
+      </div>
+
 
 
 
