add div classes to another part of the html. column still not working, removed img with float but will readd later

--- a/index.html
+++ b/index.html
@@ -19,6 +19,33 @@
 
 
 
+      <div class="container">
+        <div class="jumbotron">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <h1 class="panel-title">About Me</h1>
+            </div>
+
+            <div class="row">
+              <div class="col-md-4">Background</div>
+              <div class="col-md-4">Education</div>
+              <div class="col-md-4">Job</div>
+              <div class="col-md-4">Present:Coding Student</div>
+            </div>
+            <div class="row">
+             <div class="col-md-4">Born and raised in Hawaii. Is Filipino.</div>
+             <div class="col-md-4">Graduated from University of Hawaii at Manoa</div>
+             <div class="col-md-4">Has worked in the service industry, been an office manager, and a teacher for special needs kids</div>
+             <div class="col-md-4">I went into coding school in hopes of having a more flexible work schedule</div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+
+
+
     <h2 class="class2">List of Projects </h2>
 
 
@@ -30,33 +57,16 @@
 
 
     <h3 class="class2">Hobbies</h3>
-     <img src="img/img5.jpg" alt="maria5">
+
+
+
+
       <ul>
         <li>Reading</li>
         <li>Hiking</li>
         <li>Cooking</li>
         <li>Traveling</li>
       </ul>
-
-      <div class="container-fluid">
-        <div class="jumbotron">
-          <div class="panel panel-info">
-            <div class="panel-heading">
-              <h1 class="panel-title">About Me</h1>
-
-              <div class="col-md-3">Background</div>
-              <div class="col-md-3">Education</div>
-              <div class="col-md-3">Job</div>
-              <div class="col-md-3">Present:Coding Student</div>
-            </div>
-
-
-
-            </div>
-          </div>
-          </div>
-        </div>
-      </div>
 
 
 
