--- a/index.html
+++ b/index.html
@@ -10,14 +10,7 @@
   <body>
 
 
-    <h1>Maria Lagunero</h1>
-
-      <div class="class1">
-        <img src="img/img1.jpg" alt="maria1">
-        <img src="img/img2.jpg" alt="maria2">
-      </div>
-
-
+    <h1><strong>Maria Lagunero</strong></h1>
 
       <div class="container">
         <div class="jumbotron">
@@ -67,6 +60,12 @@
         <li>Cooking</li>
         <li>Traveling</li>
       </ul>
+
+
+      <div class="class1">
+        <img src="img/img1.jpg" alt="maria1">
+        <img src="img/img2.jpg" alt="maria2">
+      </div>
 
 
 
