--- a/index.html
+++ b/index.html
@@ -1,74 +1,78 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-  <head>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <meta charset="utf-8">
-    <title>Portfolio:Maria Lagunero</title>
-  </head>
-  <body>
+<head>
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <title>Portfolio:Maria Lagunero</title>
+</head>
+<body>
+  <h1><strong>Maria Lagunero</strong></h1>
+  <div class="intro">
+    <p>Hello </em>and</em> Welcome!</p>
+    <blockquote>
+        <p>"Not all who wander are lost"</p>
+        <footer>Tolkien</footer>
+  </div>
+    </blockquote>
 
 
-    <h1><strong>Maria Lagunero</strong></h1>
 
-      <div class="container">
-        <div class="jumbotron">
-          <div class="panel panel-info">
-            <div class="panel-heading">
-              <h2 class="panel-title">About Me</h2>
-            </div>
 
-            <div class="row">
-              <div class="col-md-4">Background</div>
-              <div class="col-md-4">Education</div>
-              <div class="col-md-4">Job</div>
-              <div class="col-md-4">Present:Coding Student</div>
-            </div>
-            <div class="row">
-             <div class="col-md-4">Born and raised in Hawaii. Is Filipino.</div>
-             <div class="col-md-4">Graduated from University of Hawaii at Manoa</div>
-             <div class="col-md-4">Has worked in the service industry, been an office manager, and a teacher for special needs kids</div>
-             <div class="col-md-4">I went into coding school in hopes of having a more flexible work schedule</div>
-            </div>
-
+    <div class="container">
+      <div class="jumbotron">
+        <div class="panel panel-info">
+          <div class="panel-heading">
+            <h2 class="panel-title">About Me</h2>
           </div>
+
+
+
+
+          <div class="row">
+            <div class="col-md-3">Background</div>
+            <div class="col-md-3">Education</div>
+            <div class="col-md-3">Job</div>
+            <div class="col-md-3">Present:Coding Student</div>
+          </div>
+          <div class="row">
+            <div class="col-md-3">Born and raised in Hawaii. Is Filipino.</div>
+            <div class="col-md-3">Graduated from University of Hawaii at Manoa</div>
+            <div class="col-md-3">Has worked in the service industry, been an office manager, and a teacher for special needs kids</div>
+            <div class="col-md-3">I went into coding school in hopes of having a more flexible work schedule</div>
+          </div>
+
         </div>
       </div>
+    </div>
 
 
 
 
-    <h3 class="class2">List of Projects </h3>
+    <h3 class="class1">List of Projects </h3>
+    <ol>
+      <li><a href="https://github.com/marialagunero/vacation/blob/master/index.html"><span id="projects">Vacation:</span>Uses bootstrap and css styles</a></li>
+      <li><a href="https://github.com/marialagunero/Cupcakes/blob/master/index.html"><span id="projects">Cupcake:</span>Uses flexbox and css styles</a></li>
+      <li><a href="https://github.com/marialagunero/foodforthought/blob/master/index.html"><span id="projects">Food For Thought:</span> Uses HTML, and flexbox</a></li>
+    </ol>
 
 
-      <ol>
-        <li><a href="https://github.com/marialagunero/vacation/blob/master/index.html">Vacation:Uses bootstrap and css styles</a></li>
-          <li><a href="https://github.com/marialagunero/Cupcakes/blob/master/index.html">Cupcake:Uses flexbox and css styles</a></li>
-          <li><a href="https://github.com/marialagunero/foodforthought/blob/master/index.html">Food For Thought: Uses HTML, and flexbox</a></li>
-        </ol>
-
-
-    <h4 class="class2">Hobbies</h4>
-
+    <h4 class="class1">Hobbies</h4>
+    <ul>
+      <li>Reading</li>
+      <li>Hiking</li>
+      <li>Cooking</li>
+      <li>Traveling</li>
+    </ul>
 
 
 
-      <ul>
-        <li>Reading</li>
-        <li>Hiking</li>
-        <li>Cooking</li>
-        <li>Traveling</li>
-      </ul>
+      <img src="img/img2.jpg" alt="maria1"style="float:right" width="200" height="100">
 
 
-      <div class="class1">
-        <img src="img/img1.jpg" alt="maria1">
-        <img src="img/img2.jpg" alt="maria2">
-      </div>
 
 
 
 
   </body>
-</html>
+  </html>
