add float picture and changed look of link to github on readme.md

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <blockquote>
         <p>"Not all who wander are lost"</p>
         <footer>Tolkien</footer>
+    <img src="img/img2.jpg" alt="maria1"style="float:center" width="250" height="200">
   </div>
     </blockquote>
 
@@ -64,15 +65,5 @@
       <li>Cooking</li>
       <li>Traveling</li>
     </ul>
-
-
-
-      <img src="img/img2.jpg" alt="maria1"style="float:right" width="200" height="100">
-
-
-
-
-
-
   </body>
-  </html>
+</html>
